fix: Pages vertical spacing

--- a/packages/ui/src/styles/base/layout.scss
+++ b/packages/ui/src/styles/base/layout.scss
@@ -11,6 +11,11 @@ body {
   background: var(--fs-body-bkg);
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+}
+
 .layout__main {
   display: flex;
   flex-wrap: wrap;
@@ -18,11 +23,11 @@ body {
 }
 
 .layout__section {
-  padding-bottom: var(--fs-spacing-4);
+  margin-bottom: var(--fs-spacing-4);
   margin-top: var(--fs-spacing-4);
 
   @include media(">=notebook") {
-    padding-bottom: var(--fs-grid-padding);
+    margin-bottom: var(--fs-grid-padding);
     margin-top: var(--fs-grid-padding);
   }
 }
@@ -74,4 +79,14 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+////////////////////
+// Pages
+////////////////////
+
+// Homepage
+.section-newsletter {
+  padding-top: var(--fs-grid-padding);
+  margin-bottom: 0;
 }
